<resources>
    <string name="app_name">AndroidKotlinExamples</string>
    <string name="female">Mujer</string>
    <string name="male">Hombre</string>

    <string name="height">Altura</string>
    <string name="height2">120cm</string>
    <string name="weight">peso</string>

    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>

    <string name="result">Tu resultado</string>
    <string name="recalculate">Recalcular</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Peso Bajo</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <string name="welcome">Bienvenido.</string>
    <string name="todo_categories">Categorías:</string>
    <string name="todo_tasks">Tareas:</string>
    <string name="todo_dialog_addTask">Añade tarea</string>
    <string name="todo_dialog_Business">Negocios</string>
    <string name="todo_dialog_personal">Personal</string>
    <string name="todo_dialog_other">Otros</string>
    <string name="todo_dialog_create_task">Crear tarea</string>


    <string name="setting_dark_mode">Modo Oscuro</string>
    <string name="setting_desc_dark_mode">Activa el modo oscuro para un cambio visual</string>
    <string name="setting_on_bluetooth">Activar Bluetooth</string>
    <string name="setting_desc_bluetooth">Conecta perifericos sin cables</string>
    <string name="setting_sound">Subir volumen</string>
    <string name="setting_vibration">Vibrar para las llamadas</string>


</resources>